--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,7 +36,8 @@
     }
    
     .dark {
-      --background: 240 10% 3.9%;
+      /* --background: 240 10% 3.9%; */
+      --background: 0, 0%, 12%;
       --foreground: 0 0% 98%;
       --card: 240 10% 3.9%;
       --card-foreground: 0 0% 98%;
