--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,3 +74,14 @@
     font-weight: normal;
     src: local('SF Mono Regular'), url('../public/fonts/SFMonoRegular.woff') format('woff');
   }
+
+  
+
+  @layer base {
+  * {
+    @apply border-border outline-ring/50;
+    }
+  body {
+    @apply bg-background text-foreground;
+    }
+}
